# workhour-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
drizzle/: schema.ts
reference/autofill_workhour/: .gitignore  package-lock.json  package.json  tailwind.config.js
reference/autofill_workhour/app/: layout.tsx  page.tsx
reference/work_trail/: .gitignore  README.md  agent.md  index.html  package-lock.json  package.json  vite.config.js
reference/work_trail/src/: App.tsx  (+2 more)
reference/workhour_webfill/: Excel工时助手.js  README.md  debug_helper.js  local_debug.html  temp_css.txt  个人工时填报页面.html  体验优化需求.txt  何天.xlsx  使用说明.md  内网密码助手.js  各个弹窗.txt  填写规范.md  密码助手.js  工时Excel批量填写脚本.js  工时Excel读取新版.js  工时自动填写脚本.js  探索项目选择弹窗界面.html  根据Excel表格填写网页工时.js  根据Excel表格填写网页工时存档.js  用户认证系统 登录界面.html  确认关闭页面弹窗.html  网页版工时填写脚本.js  镇海炼化科技管理平台.html  项目选择逻辑.txt
release-notes/: app-v0.2.3.md
scripts/: tauri-dev.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Chart.tsx  GuideDocs.tsx
src/data/: defaults.ts  migrations.ts  types.ts
src/features/: autofill.ts  excel.ts  workspaceBackup.ts
src/lib/: db.ts  time.ts  utils.ts
src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  ImportExportPage.tsx  SettingsPage.tsx
src/styles/: globals.css
web-docs/: import-export.md  menu-rules.md  overview.md  projects-and-templates.md  schedule-and-autofill.md
(+63 files in other folders)
